# advent-of-code-2025

./: .gitignore  .marimo.toml  pyproject.toml
solutions/: 1.py  10.py  11.py  12.py  2.py  3.py  4.py  5.py  6.py  7.py  8.py  9.py  x.py
src/advent_of_code_2025/: graph.py  grid.py  paths.py  utils.py
