[project]
dependencies = []
name = "advent-of-code-2025"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.ruff]
lint.select = ["E", "F", "I"]
lint.ignore = []
line-length = 110
exclude = [
    ".pixi",
]

[tool.pixi.pypi-dependencies]
advent_of_code_2025 = { path = ".", editable = true }

[tool.pixi.tasks]
fmt = 'ruff format --exclude="*.ipynb"'
lint = 'ruff check . --fix --exclude="*.ipynb"'
style = [{ task = "lint" }, { task = "fmt" }]
edit = 'marimo edit'

[tool.pixi.dependencies]
marimo = ">=0.18.0,<0.19"
polars = ">=1.35.2,<2"
matplotlib = ">=3.10.8,<4"
numpy = ">=2.3.5,<3"
ruff = ">=0.14.7,<0.15"
python-lsp-server = ">=1.13.2,<2"
python-lsp-ruff = ">=2.3.0,<3"
pyprojroot = ">=0.3.0,<0.4"
python-dotenv = ">=1.2.1,<2"
requests = ">=2.32.5,<3"
